@@ -1,3 +1,8 @@
+2005-02-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Added some additional roster support. Put images
+	into the online users list to indicate presence status.
+
 2005-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Cleaned up quite a lot of whitespace at the end of
